test/sema/typeck/pattern/class-no-args-missing-params.dora
class Foo(Int64)
fn f(x: Foo) {
    let Foo = x;
}
